--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Garren-Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="script.js">
+    <title>Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
 </head>
 <body>
     <header class="flex justify-between items-center p-5 bg-opacity-50">
-        <a href="" class="text-4xl font-bold">Garren Benaya</a>
+        <h1 class="text-4xl font-bold">My Portfolio</h1>
         <nav>
             <a href="#about" class="mx-3">About Me</a>
             <a href="#skills" class="mx-3">Skills</a>
@@ -120,11 +119,15 @@
         <div class="container mx-auto px-6">
             <h2 class="text-2xl font-bold mb-5">Connect with me</h2>
             <div class="flex justify-center space-x-5 mb-5">
-                <a href="https://www.github/gerenP" target="_blank" class="hover:text-yellow-400">GitHub</a>
-                <a href="https://www.instagram.com/geren_aja" target="_blank" class="hover:text-yellow-400">Instagram</a>
+                <a href="https://www.linkedin.com/in/yourprofile" target="_blank" class="hover:text-yellow-400">LinkedIn</a>
+                <a href="https://github.com/yourusername" target="_blank" class="hover:text-yellow-400">GitHub</a>
+                <a href="https://twitter.com/yourusername" target="_blank" class="hover:text-yellow-400">Twitter</a>
+                <a href="https://www.instagram.com/yourusername" target="_blank" class="hover:text-yellow-400">Instagram</a>
             </div>
-            <p class="text-sm">© Garren-Portfolio</p>
+            <p class="text-sm">© 2024 Your Name. All rights reserved.</p>
         </div>
     </footer>
+
+    <script src="script.js"></script> <!-- Link to the JS file -->
 </body>
 </html>
