--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 
     <main class="flex flex-col items-center justify-center min-h-screen" data-aos="fade-up">
-        <h1 class="text-6xl font-bold mb-5 text-white">Hi, I'm <span>Garren Benaya</span>, a Front-End Developer Based In Jakarta, Indonesia.</h1>
+        <h1 class="text-4xl font-bold mb-5 text-white">Hi, I'm <span>Garren Benaya</span>, a Front-End <br>Developer Based In Jakarta, Indonesia.</h1>
         <div class="typewriter">
         </div>
         <p class="text-2xl mb-10 fade-in">Front-End Developer</p>
