--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
             left: 10px;
             top: 90%;
             transform: translateY(-50%);
-            background: rgba(0, 0, 0, 0.7);
             padding: 10px;
             border-radius: 8px;
         }
@@ -97,9 +96,8 @@
             <li data-aos="fade-down" data-aos-delay="1200" data-aos-duration="1800">
                 <a href="#contact" class="text-white px-3 py-2 hover:text-gray-300 transition duration-300">Contact</a>
             </li>
-            <li data-aos="fade-down" data-aos-delay="1500" data-aos-duration="2100">
-                <a href="#">
-                    <button class="btn-resume text-white px-3 py-2 hover:text-gray-300 transition duration-300">Garren</button>
+            <li class="garren" data-aos="fade-down" data-aos-delay="1500" data-aos-duration="2100">
+                <a href="" style="--clr:#4bffa5"><span>Garren</span><i></i>
                 </a>
             </li>
         </ul>
@@ -111,25 +109,13 @@
     </header>
 
     <div class="fixed-left-info">
-        <p><a href="mailto:garrenbenaya74@gmail.com">Email: garrenbenaya74@gmail.com</a></p>
-        <p><a href="tel:+6282116341828">Telepon: +62 821-1634-1828</a></p>
+        <p>
+            <a href="mailto:garrenbenaya74@gmail.com">Email: garrenbenaya74@gmail.com</a>
+        </p>
+        <p>
+            <a href="tel:+6282116341828">Telepon: +62 821-1634-1828</a>
+        </p>
     </div>
-    <ul class="header-right-info" data-aos="fade-in" data-aos-delay="2000" data-aos-duration="1200">
-        <p>Follow Me</p>
-        <div class="standing-line-right"></div>
-        <li>
-            <a href="https://github.com/gerenp" target="_blank"><i class="fa fa-github"></i></a>
-        </li>
-        <li>
-            <a href="#" target="_blank"><i class="fa fa-youtube"></i></a>
-        </li>
-        <li>
-            <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-        </li>
-        <li class="last-icon">
-            <a href="https://www.instagram.com/geren_aja/" target="_blank"><i class="fa fa-instagram"></i></a>
-        </li>
-    </ul>
 
     <main class="flex flex-col items-center justify-center min-h-screen" data-aos="fade-up">
         <h1 class="text-4xl font-bold mb-4 mr-48 text-white">Hi, I'm <span>Garren Benaya</span>, a Front-End <br>Developer Based In Jakarta, Indonesia.</h1>
