--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <body class="bg-gray-900 text-white">
     <header class="navbar flex justify-between items-center p-5 shadow-lg" id="navbar">
         <div class="logo" data-aos="fade-in" data-aos-delay="100" data-aos-duration="800">
-            <a href="#" class="copyright text-2xl font-bold transition duration-300 text-white"><span>Garren</span> Benaya</a>
+            <a href="" class="copyright text-2xl font-bold transition duration-300" data-aos="fade-down" data-aos-delay="300" data-aos-duration="900" text-white"><span>Garren</span> Benaya</a>
         </div>
         <ul class="nav-links flex space-x-5" data-aos="fade-down">
             <li data-aos="fade-down" data-aos-delay="300" data-aos-duration="900">
@@ -118,7 +118,7 @@
     </div>
 
     <main class="flex flex-col items-center justify-center min-h-screen" data-aos="fade-up">
-        <h1 class="text-4xl font-bold mb-4 mr-48 text-white">Hi, I'm <span>Garren Benaya</span>, a Front-End <br>Developer Based In Jakarta, Indonesia.</h1>
+        <h1 class="text-4xl font-bold mb-4 mr-48 text-white">Hi, I'm <span>Garren Benaya</span>, Front-End <br>Developer Based In Jakarta, Indonesia.</h1>
         <h2 data-aos="fade-in" data-aos-delay="500" data-aos-duration="1200">
             <a href="#" class="typewrite mr-48" data-period="1000" data-type='[  
               "Crafting elegant solutions to complex problems with a focus on user experience.",
