--- a/index.html
+++ b/index.html
@@ -128,26 +128,26 @@
         </h2>
     </main>
     
-    <section id="about" class="py-20 bg-white text-black" data-aos="fade-right">
+    <section id="about" class="py-20 bg-black text-white" data-aos="fade-right">
         <div class="container mx-auto px-6">
             <h2 class="text-4xl font-bold mb-5">About Me</h2>
             <p class="text-lg">I am a passionate Front-End Developer...</p>
         </div>
     </section>
 
-    <section id="skills" class="py-20 bg-white text-black" data-aos="fade-left">
+    <section id="skills" class="py-20 bg-black text-white" data-aos="fade-left">
         <div class="container mx-auto px-6">
             <h2 class="text-4xl font-bold mb-5">Skills</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
-                <div class="p-5 bg-white shadow rounded-lg">
+                <div class="p-5 bg-black shadow rounded-lg">
                     <h3 class="text-2xl font-bold mb-3">HTML</h3>
                     <p>Proficient in creating structured and semantic HTML.</p>
                 </div>
-                <div class="p-5 bg-white shadow rounded-lg">
+                <div class="p-5 bg-black shadow rounded-lg">
                     <h3 class="text-2xl font-bold mb-3">CSS</h3>
                     <p>Skilled in crafting responsive and visually appealing designs.</p>
                 </div>
-                <div class="p-5 bg-white shadow rounded-lg">
+                <div class="p-5 bg-black shadow rounded-lg">
                     <h3 class="text-2xl font-bold mb-3">JavaScript</h3>
                     <p>Experienced in adding interactivity...</p>
                 </div>
@@ -155,19 +155,19 @@
         </div>
     </section>
 
-    <section id="projects" class="py-20 bg-white text-black" data-aos="fade-up">
+    <section id="projects" class="py-20 bg-black text-white" data-aos="fade-up">
         <div class="container mx-auto px-6">
             <h2 class="text-4xl font-bold mb-5">Projects</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
-                <div class="p-5 bg-gray-100 shadow rounded-lg">
+                <div class="p-5 bg-gray-800 shadow rounded-lg">
                     <h3 class="text-2xl font-bold mb-3">Project 1</h3>
                     <p>Brief description of Project 1.</p>
                 </div>
-                <div class="p-5 bg-gray-100 shadow rounded-lg">
+                <div class="p-5 bg-gray-800 shadow rounded-lg">
                     <h3 class="text-2xl font-bold mb-3">Project 2</h3>
                     <p>Brief description of Project 2.</p>
                 </div>
-                <div class="p-5 bg-gray-100 shadow rounded-lg">
+                <div class="p-5 bg-gray-800 shadow rounded-lg">
                     <h3 class="text-2xl font-bold mb-3">Project 3</h3>
                     <p>Brief description of Project 3.</p>
                 </div>
@@ -175,7 +175,7 @@
         </div>
     </section>
 
-    <section id="contact" class="py-20 bg-gray-100 text-black" data-aos="fade-up">
+    <section id="contact" class="py-20 bg-black text-white" data-aos="fade-up">
         <div class="container mx-auto px-6">
             <h2 class="text-4xl font-bold mb-5">Contact</h2>
             <p>If you would like to get in touch...</p>
@@ -196,7 +196,7 @@
             </form>
         </div>
     </section>
-
+    
     <footer class="copyright py-4 bg-black text-white text-center">
         <p>Made by Garren Benaya</p>
     </footer>
